[GTK] Checks for DEVELOPMENT_BUILD are all wrong https://bugs.webkit.org/show_bug.cgi?id=144746

Reviewed by Martin Robinson.

.:

Don't set DEVELOPMENT_BUILD. We check whether it is defined for conditional compilation, not
what it is defined to, so defining it to 0 effectively turned it on always.

* Source/cmake/OptionsGTK.cmake:

Source/WebCore:

Use DEVELOPER_MODE rather than DEVELOPMENT_BUILD.

* platform/gtk/GtkUtilities.cpp:
* platform/gtk/GtkUtilities.h:
* platform/text/gtk/HyphenationLibHyphen.cpp:
(WebCore::availableLocales):

Source/WebKit2:

Use DEVELOPER_MODE rather than DEVELOPMENT_BUILD.

* Shared/gtk/ProcessExecutablePathGtk.cpp:
(WebKit::findWebKitProcess):
* UIProcess/API/gtk/WebKitWebContext.cpp:
(injectedBundleDirectory):
* UIProcess/gtk/TextCheckerGtk.cpp:
(WebKit::enchantTextChecker):

Tools:

Use DEVELOPER_MODE rather than DEVELOPMENT_BUILD.

* MiniBrowser/gtk/main.c:
(main):


Canonical link: https://commits.webkit.org/162777@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183945 268f45cc-cd09-0410-ab3c-d52691b4dbfc